Working on issue #16: aligning total time text on the right.

--- a/omniplan/public/stylesheets/style.css
+++ b/omniplan/public/stylesheets/style.css
@@ -66,3 +66,14 @@ a {
 .igreen:hover {
 	color: #0b0;
 }
+
+.row.no-gutters {
+  margin-right: 0;
+  margin-left: 0;
+}
+
+.row.no-gutters > [class^="col-"],
+.row.no-gutters > [class*=" col-"] {
+  padding-right: 0;
+  padding-left: 0;
+}
